bug 241062 link name is not supported r = pkwarren sr= Henry.Jia