accessible/src/atk/nsAccessibleHyperText.cpp
@@ -461,7 +461,7 @@ NS_IMETHODIMP nsAccessibleHyperText::GetLink(PRInt32 aIndex, nsIAccessibleHyperL
           }
         }
         if (!(*aLink)) {
-          *aLink = new nsHTMLLinkAccessibleWrap(parentNode, weakShell, nsnull);
+          *aLink = new nsHTMLLinkAccessibleWrap(parentNode, mTextChildren, weakShell, nsnull);
           NS_ENSURE_TRUE(*aLink, NS_ERROR_OUT_OF_MEMORY);
           NS_ADDREF(*aLink);
           nsCOMPtr<nsPIAccessNode> accessNode(do_QueryInterface(*aLink));
